# aktualizr

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .ort.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CTestCustom.cmake  Dockerfile  Dockerfile.16.04  Dockerfile.deb-stable  Dockerfile.deb-testing  Dockerfile.deb-unstable  Dockerfile.garage-deploy.deb-stable  Dockerfile.garage-push  Dockerfile.garage-tools  Dockerfile.gcc4  Dockerfile.noostree  Dockerfile.nop11  Dockerfile.static-checks  Dockerfile.test-install-garage-deploy.xenial  Dockerfile.test-install.xenial  Dockerfile.test.16.04  Dockerfile.ubuntu-xenial  Jenkinsfile  Makefile  README.adoc  README.md  README.sotatools.adoc  _c_h_a_n_g_e_l_o_g_8md_source.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md_source.html  accumulator_8h_source.html  actions.md  aktualizr_8cc_source.html  aktualizr_8h_source.html  aktualizr__cycle__simple_8cc_source.html  (+2063 more)
code/: CMakeLists.txt  Makefile
code/src/: main.cpp
config/: CMakeLists.txt  basic.toml  conf.json  config.toml.example  config.yml.example  posix-secondary-config.json  posix-secondary.toml  posix_secondary.toml  sota-local-with-secondaries.toml  sota-local.toml  sota-uboot-env.toml  sota-ubuntu.toml  sota_autoprov.toml  sota_autoprov_primary.toml  sota_hsm_prov.toml  sota_implicit_demo.toml  sota_implicit_prov.toml  sota_implicit_prov_ca.toml  sota_local.toml  sota_local_with_secondaries.toml  sota_secondary.toml  sota_ubuntu.toml
config/aktualizr_secondary/: config.toml.example
config/docker-compose-secondaries/: docker-compose.json  example-redis.yml
config/schemas/: migrate.0.sql  migrate.1.sql  migrate.2.sql  migrate.3.sql  schema.1.sql  schema.2.sql  schema.3.sql  schema.4.sql
config/secondary/: virtualsec.json
config/sql/: schema.sql
config/storage/: migrate.0.sql  migrate.1.sql  schema.0.json  schema.0.sql  schema.1.sql
config/systemd/: aktualizr-ubuntu.service
docs/: CMakeLists.txt  Doxyfile.in  INDEX.md  README.adoc  aktualizr-repo.adoc  automatic-provisioning.adoc  client-provisioning-methods.adoc  configuration.adoc  credentials.adoc  deb-package-install.adoc  debugging-tips.adoc  ecu_events.adoc  fault-injection.adoc  hacky-implicit-provisioning-version2.adoc  hacky-implicit-provisioning.adoc  hsm-provisioning.adoc  implicit-provisioning.adoc  integrate-libaktualizr.adoc  integrating-libaktualizr.adoc  legacysecondary.adoc  linux-secondaries.adoc  opcua-bridge.adoc  posix-secondaries-bitbaking.adoc  posix-secondaries.adoc  primary-secondary-protocol.adoc  programatically-triggering-polling.adoc  provision-with-device-credentials.adoc  provisioning-methods-and-credentialszip.adoc  rollback.adoc  running-locally.adoc  schema-migrations.adoc  security.adoc  selectively-triggering-aktualizr.adoc  tuf-uptane.adoc  uptane-generator.adoc
docs/doxygen/: CMakeLists.txt  Doxyfile.in  INDEX.md
docs/ota-client-guide/: antora.yml
fuzz/: CMakeLists.txt  afl.cc  afl.sh
partial/: CMakeLists.txt  README.adoc
partial/ed25519/: Makefile  ed25519.c  edsign.c  edsign.h  f25519.c  fprime.c  fprime.h  sha512.c  sha512.h
partial/examples/: genpair.c  sign.c  verify_targets.c
partial/libuptiny/: Makefile  base64.c  base64.h  common_data.c  common_data_api.h  crypto.c  crypto.h  crypto_api.h  crypto_common.c  crypto_common.h  debug.h  firmware.c  firmware.h  jsmn.c  jsmn.h  json_common.c  json_common.h  manifest.c  manifest.h  root.c  root.h  root_signed.c  root_signed.h  signatures.c  signatures.h  state_api.h  targets.c  targets.h  uptane_time.c  uptane_time.h  utils.c  utils.h
partial/libuptiny-demo/: Makefile  common_data.c  crypto.c  flash.c  flash.h  main.c  state.c
partial/src/: CMakeLists.txt  crypto.c  targets.c  targets.h  uptane_config.h  uptane_time.c
partial/tests/: base64_test.cc  firmware_test.cc  root_signed_test.cc  root_test.cc  signatures_test.cc  targets_test.cc  test_common_data.cc  test_crypto.c  test_crypto.cc  test_state.cc  update_test.cc
partial/uptane/: crypto.c  crypto.h  readjson.c  readjson.h  root.h  targets.c  targets.h  uptane_config.h  uptane_time.c  uptane_time.h
src/: CMakeLists.txt  aktualizr.cc  aktualizr.h  aktualizr_secondary_ipc.cc  aktualizr_secondary_ipc.h  asn1-cer.cc  asn1-cer.h  asn1-cerstream.cc  asn1-cerstream.h  bootstrap.cc  bootstrap.h  channel.h  commandinterpreter.cc  commandinterpreter.h  commands.cc  commands.h  config.cc  config.h  config_utils.h  crypto.cc  crypto.h  deb.cc  deb.h  events.cc  events.h  eventsinterpreter.cc  eventsinterpreter.h  exceptions.h  fsstorage.cc  fsstorage.h  gateway.h  gatewaymanager.cc  gatewaymanager.h  httpclient.cc  httpclient.h  httpcommandinterpreter.cc  httpcommandinterpreter.h  httpinterface.h  interpreter.cc  interpreter.h  (+65 more)
src/grpc/: main.cc  (+1 more)
test_src/: CMakeLists.txt  test_oauthtoken.cpp  test_servercon.cpp
tests/: CMakeLists.txt  aktualizr.supp  aktualizr_cycle_simple.cc  asn1_test.cc  authenticate_cred_test.cc  auto_prov_test.py  build_with_options  build_with_options.sh  commands_test.cc  conf_test_aktualizr_info.toml  config_selfupdate.toml  config_test.cc  config_tests.toml  config_tests_device_id.toml  config_tests_prov.toml  config_tests_prov_bad.toml  crypto_test.cc  dbusgateway_test.cc  dependencies.py  device_cred_prov_hsm_test.py  device_cred_prov_test.py  docker_deb_test.sh  events_test.cc  fake_ostree.cc  find_listening_port.sh  fiuinfo_test.cc  fsstorage_test.cc  get_open_port.py  glib.supp  hsm_prov_test.py  hsm_test.cc  httpclient_test.cc  httpfake.h  httpsotaclient_test.cc  implicit_prov_test.py  implicit_writer_test.py  initializer_implicit_test.cc  ipsecondary_discovery_test.cc  ipsecondary_test.py  ipuptane_connection_test.cc  (+68 more)
tools/: CMakeLists.txt  accumulator.h  auth_plus.cc  auth_plus.h  authenticate.h  logging.cc  logging.h  main.cc  oauth2.cc  oauth2.h  ostree_dir_repo.h  ostree_hash.cc  ostree_http_repo.cc  ostree_http_repo.h  ostree_object.cc  ostree_object.h  ostree_ref.cc  ostree_ref.h  ostree_repo.cc  ostree_repo.h  request_pool.cc  request_pool.h  treehub_server.cc  treehub_server.h
(+15159 files in other folders)
